--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,8 @@ Version: 1.0
 [ IMPORT FONTS ]*/
 
 @import url('../fonts/pppangramsans/stylesheet.css');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 @import url('../fonts/boxicons/boxicons.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;700&family=Unbounded:wght@300;400;700&display=swap');
 
 /*//////////////////////////////////////////////////////////////////
 [ ROOT ]*/
@@ -41,13 +41,15 @@ Version: 1.0
     --color-deep-blue: #259EF1;
     --color-grey: #838189;
     --color-white: #fff;
-    --ff-main: 'PP Pangram Sans', sans-serif;
-    --ff-secondary: 'Open Sans', sans-serif;
+    --ff-main: 'Noto Sans', sans-serif;
+	--ff-title: 'Unbounded', cursive;
+    --ff-secondary: 'Noto Sans', sans-serif;
     --fw-light: 300;
     --fw-regular: 400;
     --fw-medium: 500;
     --fw-semibold: 600;
     --fw-bold: 700;
+    --bs-light-rgb: 246, 247, 248;
     --bs-body-font-family: var(--ff-main);
     --bs-body-font-size: 1.125rem;
     --bs-body-font-weight: var(--fw-medium);
@@ -60,7 +62,7 @@ Version: 1.0
 }
 
 html {
-	height: 100%;
+	min-height: 100vh;
     scroll-behavior: smooth;
 }
 
@@ -78,9 +80,7 @@ html::-webkit-scrollbar-thumb {
 }
 
 body {
-	display: flex;
-    flex-direction: column;
-    height: 100%;
+	min-height: 100vh;
 }
 
 /*//////////////////////////////////////////////////////////////////
@@ -98,72 +98,20 @@ h2,
 .h2,
 h1,
 .h1 {
-    font-family: var(--ff-main);
-    font-weight: var(--fw-medium);
+    font-family: 'Unbounded', cursive;
+    font-weight: 700;
     line-height: 1.35;
-}
-
-h1,
-.h1 {
-    font-size: 2.125rem;
-}
-
-h2,
-.h2 {
-    font-size: 2.125rem;
-}
-
-h3,
-.h3 {
-    font-size: 1.5rem;
-}
-
-h4,
-.h4 {
-    font-size: 1.25rem;
+	margin-bottom: 1rem;
 }
 
 h5,
 .h5 {
-    font-size: 1.125rem;
+    font-weight: 400;
 }
 
 h6,
 .h6 {
-    font-size: 1.125rem;
-}
-
-@media (min-width: 992px) {
-
-    h1,
-    .h1 {
-        font-size: 3rem;
-    }
-
-    h2,
-    .h2 {
-        font-size: 2rem;
-    }
-
-    h3,
-    .h3 {
-        font-size: 1.25rem;
-    }
-
-    h4,
-    .h4 {
-        font-size: 1.25rem;
-    }
-
-    h5,
-    .h5 {
-        font-size: 1.125rem;
-    }
-
-    h6,
-    .h6 {
-        font-size: 1.125rem;
-    }
+    font-weight: 400;
 }
 
 /*//////////////////////////////////////////////////////////////////
@@ -236,11 +184,6 @@ textarea {
     width: 1.25rem;
     height: 1.25rem;
     margin-top: 0.25rem;
-}
-
-.form-check-input[type=checkbox],
-.form-check-input:checked {
-    border-radius: 0;
 }
 
 .form-check-input:focus {
@@ -360,6 +303,40 @@ textarea {
     --bs-btn-disabled-border-color: var(--color-black);
 }
 
+.btn-outline-black {
+    --bs-btn-color: var(--color-black);
+    --bs-btn-bg: transparent;
+    --bs-btn-border-color: var(--color-black);
+    --bs-btn-hover-color: var(--color-blue);
+    --bs-btn-hover-bg: transparent;
+    --bs-btn-hover-border-color: var(--color-blue);
+    --bs-btn-focus-shadow-rgb: 226, 3, 56;
+    --bs-btn-active-color: var(--color-blue);
+    --bs-btn-active-bg: transparent;
+    --bs-btn-active-border-color: var(--color-blue);
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: var(--color-black);
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: var(--color-black);
+}
+
+.btn-white {
+    --bs-btn-color: var(--color-black);
+    --bs-btn-bg: var(--color-white);
+    --bs-btn-border-color: var(--color-white);
+    --bs-btn-hover-color: var(--color-blue);
+    --bs-btn-hover-bg: var(--color-white);
+    --bs-btn-hover-border-color: var(--color-white);
+    --bs-btn-focus-shadow-rgb: 226, 3, 56;
+    --bs-btn-active-color: var(--color-blue);
+    --bs-btn-active-bg: var(--color-white);
+    --bs-btn-active-border-color: var(--color-white);
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: var(--color-blue);
+    --bs-btn-disabled-bg: var(--color-white);
+    --bs-btn-disabled-border-color: var(--color-white);
+}
+
 .btn-black {
     --bs-btn-color: #fff;
     --bs-btn-bg: transparent;
@@ -475,6 +452,33 @@ textarea {
     background-position: 0 0;
 }
 
+.toggle-link {
+	display: block;
+	padding: 10px 0;	
+	text-decoration: none;
+	color: #46A6F7;
+	font-weight: normal;
+}
+
+.panel {
+	overflow: hidden;
+	padding: 10px 0 0;
+	max-height: 0;
+	transition: max-height 0.3s ease; /* Плавная анимация */
+}
+
+.panel ul {
+	margin: 0;
+	padding: 0;
+}
+
+.panel li {
+	list-style: none;
+}
+.btn-sale-border {
+	border: 2px #CB34FF;
+}
+
 .btn-gradient {
     transition: background-position 0.3s ease-in-out;
 }
@@ -562,6 +566,147 @@ textarea {
     transform: rotate(-15deg);
 }
 
+/* В шаблоне build-scroll сделать возможность устанавливать свой стиль карточкам, ниже временное решение */
+
+@media (min-width: 1200px) {
+	
+	.rainbow-cards>.row>*:nth-child(1)>.h-bg-rainbow:hover,
+	.rainbow-cards>.row>*:nth-child(1)>.h-bg-rainbow:focus,
+	.h-bg-blue:hover,
+	.h-bg-blue:focus {
+		color: #fff;
+		border-color: #7fc4ff;
+		background-color: #7fc4ff;
+	}
+
+	.rainbow-cards>.row>*:nth-child(1)>.h-bg-rainbow:hover,
+	.h-bg-blue:hover .color-gray {
+		color: #f5f5f5;
+	}
+
+	.rainbow-cards>.row>*:nth-child(2)>.h-bg-rainbow:hover,
+	.rainbow-cards>.row>*:nth-child(2)>.h-bg-rainbow:focus,
+	.h-bg-purple:hover,
+	.h-bg-purple:focus {
+		color: #fff;
+		border-color: #b593ff;
+		background-color: #b593ff;
+	}
+
+	.rainbow-cards>.row>*:nth-child(2)>.h-bg-rainbow:hover,
+	.h-bg-purple:hover .color-gray {
+		color: #f5f5f5;
+	}
+
+	.rainbow-cards>.row>*:nth-child(3)>.h-bg-rainbow:hover,
+	.rainbow-cards>.row>*:nth-child(3)>.h-bg-rainbow:focus,
+	.h-bg-orange:hover,
+	.h-bg-orange:focus {
+		color: #fff;
+		border-color: #fb785b;
+		background-color: #fb785b;
+	}
+
+	.rainbow-cards>.row>*:nth-child(3)>.h-bg-rainbow:hover,
+	.h-bg-orange:hover .color-gray {
+		color: #f5f5f5;
+	}
+
+	.rainbow-cards>.row>*:nth-child(4)>.h-bg-rainbow:hover,
+	.rainbow-cards>.row>*:nth-child(4)>.h-bg-rainbow:focus,
+	.h-bg-green:hover,
+	.h-bg-green:focus {
+		color: #fff;
+		border-color: #48d5a2;
+		background-color: #48d5a2;
+	}
+
+	.rainbow-cards>.row>*:nth-child(4)>.h-bg-rainbow:hover,
+	.h-bg-green:hover .color-gray {
+		color: #f5f5f5;
+	}
+
+	.rainbow-cards>.row>*:nth-child(5)>.h-bg-rainbow:hover,
+	.rainbow-cards>.row>*:nth-child(5)>.h-bg-rainbow:focus,
+	.h-bg-pink:hover,
+	.h-bg-pink:focus {
+		color: #fff;
+		border-color: #f79098;
+		background-color: #f79098;
+	}
+
+	.rainbow-cards>.row>*:nth-child(5)>.h-bg-rainbow:hover,
+	.h-bg-pink:hover .color-gray {
+		color: #f5f5f5;
+	}
+
+	.rainbow-cards>.row>*:nth-child(6)>.h-bg-rainbow:hover,
+	.rainbow-cards>.row>*:nth-child(6)>.h-bg-rainbow:focus,
+	.h-bg-yellow:hover,
+	.h-bg-yellow:focus {
+		color: #fff;
+		border-color: #f7d974;
+		background-color: #f7d974;
+	}
+
+	.rainbow-cards>.row>*:nth-child(6)>.h-bg-rainbow:hover,
+	.h-bg-yellow:hover .color-gray {
+		color: #f5f5f5;
+	}
+
+	.h-shadow:hover {
+		box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+	}
+
+	.h-scale:hover {
+		transform: scale(1.05);
+	}
+
+	.h-transition-sm {
+		transition: all 0.15s linear;
+	}
+
+	.h-transition-md {
+		transition: all 0.3s linear;
+	}
+
+	.h-transition-lg {
+		transition: all 0.5s linear;
+	}
+
+	.svg-fill {
+		fill: #120E1E;
+	}
+
+	.h-bg-rainbow:hover .svg-fill {
+		fill: #ffffff;
+	}
+
+	.h-bg-blue:hover .svg-fill {
+		fill: #ffffff;
+	}
+
+	.h-bg-purple:hover .svg-fill {
+		fill: #ffffff;
+	}
+
+	.h-bg-orange:hover .svg-fill {
+		fill: #ffffff;
+	}
+
+	.h-bg-green:hover .svg-fill {
+		fill: #ffffff;
+	}
+
+	.h-bg-pink:hover .svg-fill {
+		fill: #ffffff;
+	}
+
+	.h-bg-yellow:hover .svg-fill {
+		fill: #ffffff;
+	}
+}
+
 /*//////////////////////////////////////////////////////////////////
 [ BASE STYLES ]*/
 
@@ -615,6 +760,10 @@ img {
 
 .fs-13 {
     font-size: 13px;
+}
+
+.fs-14 {
+    font-size: 14px;
 }
 
 .fs-16 {
@@ -690,6 +839,11 @@ img {
 
 .lh-4 {
     line-height: 1.5;
+}
+
+ul.lh-4 > li::marker {
+	content: '✔ ';
+	color: var(--color-blue);
 }
 
 .bg-img {
@@ -951,6 +1105,8 @@ img {
 [ FOOTER ]*/
 
 .footer {
+    position: sticky;
+  	top: 100vh;
 	border-top: 1px solid rgb(70 166 247 / 38%);
 }
 
@@ -1072,15 +1228,21 @@ img {
     --bs-card-bg: #fff;
     --bs-card-img-overlay-padding: 1rem;
     --bs-card-group-margin: 0.75rem;
-    word-wrap: normal;
+}
+
+.card-header {
+	border-bottom: none;
+}
+
+.card-footer {
+	border-top: none;
 }
 
 /*//////////////////////////////////////////////////////////////////
 [ MAIN CONTENT ]*/
 
 .main {
-	flex: 1 1 auto;
-    padding: 170px 0 0;
+    padding: 0;
 }
 
 .dark-mode {
@@ -1138,13 +1300,28 @@ img {
     opacity: 0 !important;
 }
 
+.btn-hero {
+    --btn-icon-size: 10rem;
+    --bs-btn-border-width: 10px;
+    --bs-btn-border-color: #fff;
+    --bs-btn-hover-border-color: #fff;
+    --bs-btn-active-border-color: #fff;
+}
+
+.bg-btn-hero {
+    width: 100%;
+    height: 100%;
+    margin-top: -5rem;
+    z-index: -1;
+}
+
 .scroll-box {
     position: relative;
 }
 
 .scroll-box::-webkit-scrollbar {
-    width: 3px;
-    height: 3px;
+    width: 2px;
+    height: 2px;
 }
 
 .scroll-box::-webkit-scrollbar-track {
@@ -1186,8 +1363,6 @@ img {
 .card.card-pricing {
     --bs-card-border-color: rgba(255, 255, 255, .1);
     --bs-card-bg: rgba(18, 14, 30, 0.8);
-    backdrop-filter: blur(46px);
-    -webkit-backdrop-filter: blur(46px);
 }
 
 .card.card-pricing .text-muted {
@@ -1233,12 +1408,14 @@ img {
 }
 
 .accordion.accordion-faq {
+    --bs-accordion-btn-padding-x: 1.25rem;
+    --bs-accordion-btn-padding-y: 2rem;
     --bs-accordion-btn-active-icon: url(../img/faq-minus.svg);
 }
 
-.accordion.accordion-faq .accordion-button::after {
+/* .accordion.accordion-faq .accordion-button::after {
     margin-top: 0.95rem;
-}
+} */
 
 /*//////////////////////////////////////////////////////////////////
 [ img-comparison-slider ]*/
@@ -1320,6 +1497,20 @@ img-comparison-slider {
 
 .card.card-blog .card-footer {
     --bs-card-border-width: 0;
+}
+
+.relatedPosts .card.card-blog .card-img,
+.relatedPosts .card.card-blog .card-img-top,
+.relatedPosts .card.card-blog .card-img-bottom {
+    width: 100%;
+	height: 360px;
+	object-fit: cover;
+}
+
+.single-sales .relatedPosts .card.card-blog .card-img,
+.single-sales .relatedPosts .card.card-blog .card-img-top,
+.single-sales .relatedPosts .card.card-blog .card-img-bottom {
+	height: 160px;
 }
 
 .pagination {
@@ -1448,10 +1639,6 @@ img-comparison-slider {
     }
 }
 
-.responsive-top {
-    top: 0;
-}
-
 .avatar-container {
     position: relative;
 }
@@ -1519,9 +1706,9 @@ img-comparison-slider {
 	background: linear-gradient(90deg, #E8FCE5 0%, #AFF6E4 100%), linear-gradient(90deg, #FFF1E0 0%, #FFF6F1 51.04%, #FFDAF4 100%), #FFFFFF;
 } */
 
-.mg-main-top2__title, .mg-main-top2__text {
+/* .mg-main-top2__title, .mg-main-top2__text {
 	line-height: 1.25;
-}
+} */
 
 .mg-main-top2__title br, .mg-main-top2__text br {
 	display: none;
@@ -1547,6 +1734,12 @@ img-comparison-slider {
 	margin-bottom: 0;
 }
 
+p.desc-period{
+	color: #8D9091;
+	margin-bottom: 0;
+	font-size: 14px;
+}
+
 .price-table .price-link:nth-child(2n) .price-item {
 	background-color: #1C1828;
 }
@@ -1570,11 +1763,18 @@ img-comparison-slider {
 	box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
 
+.card.card-with-icon {
+	--bs-card-spacer-y: 1.5rem;
+    --bs-card-spacer-x: 1.5rem;
+	--bs-card-cap-padding-y: 1.5rem;
+    --bs-card-cap-padding-x: 1.5rem;
+}
 
 /*//////////////////////////////////////////////////////////////////
 [ MEDIA ]*/
 
 @media (min-width: 576px) {
+    
 	.modal-sm {
     	--bs-modal-width: 320px;
 	}
@@ -1699,10 +1899,6 @@ img-comparison-slider {
         width: 64px;
         height: 64px;
     }
-
-    .responsive-top {
-        top: 180px;
-    }
 }
 
 @media (min-width: 1200px) {
@@ -1719,6 +1915,20 @@ img-comparison-slider {
 }
 
 @media (min-width: 1400px) {}
+
+@media (min-width: 1600px) {
+
+    .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+        max-width: 1400px;
+    }
+}
+
+@media (min-width: 1920px) {
+
+    .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+        max-width: 1500px;
+    }
+}
 
 @media (min-width: 2560px) {
 
