--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ Version: 1.0
     --bs-body-font-weight: var(--fw-medium);
     --bs-body-line-height: 1.5;
     --bs-body-color: var(--color-black);
-    --bs-body-bg: #fff;
+    --bs-body-bg: 246, 247, 248;
     --bs-border-color: #dee2e6;
     --bs-link-color: var(--color-black);
     --bs-link-hover-color: var(--color-blue);
@@ -984,7 +984,11 @@ ul.lh-4 > li::marker {
 [ HEADER ]*/
 
 .sticky-heading {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
     z-index: 1030;
+    background-color: #fff;
 }
 
 /*//////////////////////////////////////////////////////////////////
@@ -1006,7 +1010,7 @@ ul.lh-4 > li::marker {
     --bs-navbar-toggler-padding-y: 0.25rem;
     --bs-navbar-toggler-padding-x: 0.25rem;
     --bs-navbar-toggler-font-size: 1.25rem;
-    --bs-navbar-toggler-icon-bg: none;
+    --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3Csvg width='34' height='15' viewBox='0 0 34 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline x1='4.08203' y1='1.5' x2='30.082' y2='1.5' stroke='black' stroke-width='3'/%3E%3Cline x1='0.582031' y1='7.5' x2='33.582' y2='7.5' stroke='black' stroke-width='3'/%3E%3Cline x1='4.08203' y1='13.5' x2='30.082' y2='13.5' stroke='black' stroke-width='3'/%3E%3C/svg%3E%0A");
     --bs-navbar-toggler-border-color: transparent;
     --bs-navbar-toggler-border-radius: 0.375rem;
     --bs-navbar-toggler-focus-width: 0;
@@ -1056,22 +1060,21 @@ ul.lh-4 > li::marker {
     }
 }
 
-.navbar-toggler {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.mobile-socials {
+    --bs-nav-link-padding-x: 0.25rem;
+    --bs-nav-link-padding-y: 0;
 }
 
-.navbar-toggler>span {
-    width: 26px;
-    height: 3px;
-    margin-top: 2px;
-    margin-bottom: 2px;
-    background-color: var(--color-black);
+.mobile-socials img {
+    width: 32px;
+    height: 32px;
 }
 
-.navbar-toggler>span:nth-child(2) {
-    width: 33px;
+.mobile-contacts {
+    --bs-nav-link-padding-x: 0;
+    --bs-nav-link-padding-y: 0.25rem;
+    --bs-nav-link-font-weight: 700;
+    font-family: var(--ff-title);
 }
 
 .logo {
@@ -1097,9 +1100,12 @@ ul.lh-4 > li::marker {
     --bs-offcanvas-box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
 }
 
-/* #navbarNav .offcanvas-body {
-    background: 50% 100% / contain no-repeat url("../img/bg-offcanvas.png");
-} */
+@media (max-width: 991px) {
+
+    .header-widget {
+        margin-bottom: 2.5rem;
+    }
+}
 
 /*//////////////////////////////////////////////////////////////////
 [ FOOTER ]*/
@@ -1107,7 +1113,6 @@ ul.lh-4 > li::marker {
 .footer {
     position: sticky;
   	top: 100vh;
-	border-top: 1px solid rgb(70 166 247 / 38%);
 }
 
 .footer .nav {
@@ -1192,6 +1197,10 @@ ul.lh-4 > li::marker {
     --bs-modal-bg: #120E1E;
 }
 
+.btn-close {
+    opacity: 1;
+}
+
 .btn-close:focus {
     box-shadow: none;
 }
@@ -1242,7 +1251,15 @@ ul.lh-4 > li::marker {
 [ MAIN CONTENT ]*/
 
 .main {
-    padding: 0;
+    padding: 0 0 120px;
+}
+
+.main > .section {
+    margin-bottom: 120px;
+}
+
+.main > .section:last-child {
+    margin-bottom: 0;
 }
 
 .dark-mode {
@@ -1304,26 +1321,6 @@ ul.lh-4 > li::marker {
     height: 100%;
     margin-top: -5rem;
     z-index: -1;
-}
-
-.scroll-box {
-    position: relative;
-}
-
-.scroll-box::-webkit-scrollbar {
-    width: 2px;
-    height: 2px;
-}
-
-.scroll-box::-webkit-scrollbar-track {
-    background-color: rgba(255, 255, 255, 0.25);
-}
-
-.scroll-box::-webkit-scrollbar-thumb {
-    border-radius: 2px;
-    outline: 2px solid var(--color-blue);
-    background-clip: content-box;
-    background-color: var(--color-blue);
 }
 
 .card.card-hover-dark {
@@ -1407,35 +1404,6 @@ ul.lh-4 > li::marker {
 /* .accordion.accordion-faq .accordion-button::after {
     margin-top: 0.95rem;
 } */
-
-/*//////////////////////////////////////////////////////////////////
-[ img-comparison-slider ]*/
-
-img-comparison-slider {
-    visibility: hidden;
-}
-
-img-comparison-slider [slot='second'] {
-    display: none;
-}
-
-img-comparison-slider.rendered {
-    visibility: inherit;
-}
-
-img-comparison-slider.rendered [slot='second'] {
-    display: unset;
-}
-
-img-comparison-slider {
-    --divider-width: 2px;
-    --divider-color: var(--color-blue);
-}
-
-.img-comparison-slider--handle {
-    width: 32px;
-    height: 32px;
-}
 
 .card.card-case {
     --bs-card-spacer-x: 0;
@@ -1697,14 +1665,6 @@ img-comparison-slider {
 	background: linear-gradient(90deg, #E8FCE5 0%, #AFF6E4 100%), linear-gradient(90deg, #FFF1E0 0%, #FFF6F1 51.04%, #FFDAF4 100%), #FFFFFF;
 } */
 
-/* .mg-main-top2__title, .mg-main-top2__text {
-	line-height: 1.25;
-} */
-
-.mg-main-top2__title br, .mg-main-top2__text br {
-	display: none;
-}
-
 .price-table .price-link {
 	text-decoration: none;
 }
@@ -1761,6 +1721,135 @@ p.desc-period{
     --bs-card-cap-padding-x: 1.5rem;
 }
 
+/*------------------------------------------------------------------
+[ top-banner ]*/
+
+.top-banner {
+    padding: 0.5rem 0;
+    background-color: var(--color-black);
+}
+
+.top-banner__title {
+    color: #fff;
+    text-transform: uppercase;
+    margin-bottom: 0;
+}
+
+@media (min-width: 992px) {
+
+    .top-banner {
+        padding: 1rem 0;
+    }
+}
+
+/*------------------------------------------------------------------
+[ top-banner ]*/
+
+.card.card-hover-dark-3 {
+    --bs-card-spacer-y: 1.5rem;
+    --bs-card-spacer-x: 1.5rem;
+    --bs-card-cap-padding-y: 1.5rem;
+    --bs-card-cap-padding-x: 1.5rem;
+    --bs-card-border-color: #f3f3f3;
+    --bs-card-bg: rgba(255, 255, 255, 1);
+    background-image: none;
+    background-size: cover;
+}
+
+@media (min-width: 1200px) {
+
+    .card.card-hover-dark-3 .btn-primary::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 1;
+    }
+
+    .card.card-hover-dark-3 .btn-primary {
+        --bs-btn-hover-border-color: #fff;
+    }
+
+    .card.card-hover-dark-3 .btn-gradient:hover {
+        background: none;
+    }
+}
+
+/*------------------------------------------------------------------
+[ main-hero-section ]*/
+
+.main-hero-section .parallax-wrap {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.main-hero-section .parallax-wrap img {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@media (min-width: 1400px) {
+
+    .main-hero-section {
+        position: relative;
+        display: flex;
+        padding-top: 3rem;
+        padding-bottom: 26rem;
+        min-height: 100vh;
+    }
+}
+
+/*------------------------------------------------------------------
+[ main-hero-price ]*/
+
+.main-hero-price {
+    position: relative;
+}
+
+.card.card-hover-dark-1 {
+    --bs-card-spacer-y: 0.5rem;
+    --bs-card-spacer-x: 1rem;
+    --bs-card-border-color: #f3f3f3;
+    --bs-card-cap-padding-y: 0.5rem;
+    --bs-card-cap-padding-x: 1rem;
+    --bs-card-bg: rgba(255, 255, 255, 1);
+}
+
+.card-body-text p {
+    margin-bottom: 0;
+}
+
+.card-body-text p+p {
+    margin-top: 1rem;
+}
+
+@media (min-width: 1200px) {
+
+    .card.card-hover-dark-1 .btn-primary::after {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 1;
+        content: "";
+    }
+}
+
+@media (min-width: 1400px) {
+    
+    .main-hero-price {
+        margin-top: -24rem;
+    }
+}
+
 /*//////////////////////////////////////////////////////////////////
 [ MEDIA ]*/
 
@@ -1780,10 +1869,6 @@ p.desc-period{
     .modal-md {
         --bs-modal-width: 600px;
     }
-	
-	.mg-main-top2__title br, .mg-main-top2__text br {
-		display: block;
-	}
 }
 
 @media (min-width: 992px) {
@@ -1879,17 +1964,6 @@ p.desc-period{
     .swiper:hover .btn-next {
         right: 0;
     }
-
-    .scroll-box {
-        max-height: 405px;
-        overflow-y: auto;
-        overflow-x: hidden;
-    }
-
-    .img-comparison-slider--handle {
-        width: 64px;
-        height: 64px;
-    }
 }
 
 @media (min-width: 1200px) {
@@ -1923,12 +1997,7 @@ p.desc-period{
 
 @media (min-width: 2560px) {
 
-    .container,
-    .container-lg,
-    .container-md,
-    .container-sm,
-    .container-xl,
-    .container-xxl {
+    .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
         max-width: 1920px;
     }
 }
