--- a/css/style.css
+++ b/css/style.css
@@ -1788,16 +1788,22 @@ p.desc-period{
 }
 
 /*------------------------------------------------------------------
-[ main-hero-section ]*/
+[ section-main-hero ]*/
 
-.main-hero-section .parallax-wrap {
+.section-main-hero {
+    position: relative;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+
+.section-main-hero .parallax-wrap {
     position: absolute;
     top: 0;
     width: 100%;
     height: 100%;
 }
 
-.main-hero-section .parallax-wrap img {
+.section-main-hero .parallax-wrap img {
     position: absolute;
     top: 0;
     width: 100%;
@@ -1805,11 +1811,16 @@ p.desc-period{
     object-fit: cover;
 }
 
+.main-hero-content {
+    position: relative;
+}
+
 @media (min-width: 1400px) {
 
-    .main-hero-section {
-        position: relative;
+    .section-main-hero {
         display: flex;
+        flex-direction: column;
+        justify-content: center;
         padding-top: 3rem;
         padding-bottom: 26rem;
         min-height: 100vh;
@@ -1817,9 +1828,9 @@ p.desc-period{
 }
 
 /*------------------------------------------------------------------
-[ main-hero-price ]*/
+[ section-hero-price ]*/
 
-.main-hero-price {
+.section-hero-price {
     position: relative;
 }
 
@@ -1854,9 +1865,9 @@ p.desc-period{
 }
 
 @media (min-width: 1400px) {
-    
-    .main-hero-price {
-        margin-top: -24rem;
+
+    .section-hero-price {
+        margin-top: -26rem;
     }
 }
 
