--- a/css/style.css
+++ b/css/style.css
@@ -566,147 +566,6 @@ textarea {
     transform: rotate(-15deg);
 }
 
-/* В шаблоне build-scroll сделать возможность устанавливать свой стиль карточкам, ниже временное решение */
-
-@media (min-width: 1200px) {
-	
-	.rainbow-cards>.row>*:nth-child(1)>.h-bg-rainbow:hover,
-	.rainbow-cards>.row>*:nth-child(1)>.h-bg-rainbow:focus,
-	.h-bg-blue:hover,
-	.h-bg-blue:focus {
-		color: #fff;
-		border-color: #7fc4ff;
-		background-color: #7fc4ff;
-	}
-
-	.rainbow-cards>.row>*:nth-child(1)>.h-bg-rainbow:hover,
-	.h-bg-blue:hover .color-gray {
-		color: #f5f5f5;
-	}
-
-	.rainbow-cards>.row>*:nth-child(2)>.h-bg-rainbow:hover,
-	.rainbow-cards>.row>*:nth-child(2)>.h-bg-rainbow:focus,
-	.h-bg-purple:hover,
-	.h-bg-purple:focus {
-		color: #fff;
-		border-color: #b593ff;
-		background-color: #b593ff;
-	}
-
-	.rainbow-cards>.row>*:nth-child(2)>.h-bg-rainbow:hover,
-	.h-bg-purple:hover .color-gray {
-		color: #f5f5f5;
-	}
-
-	.rainbow-cards>.row>*:nth-child(3)>.h-bg-rainbow:hover,
-	.rainbow-cards>.row>*:nth-child(3)>.h-bg-rainbow:focus,
-	.h-bg-orange:hover,
-	.h-bg-orange:focus {
-		color: #fff;
-		border-color: #fb785b;
-		background-color: #fb785b;
-	}
-
-	.rainbow-cards>.row>*:nth-child(3)>.h-bg-rainbow:hover,
-	.h-bg-orange:hover .color-gray {
-		color: #f5f5f5;
-	}
-
-	.rainbow-cards>.row>*:nth-child(4)>.h-bg-rainbow:hover,
-	.rainbow-cards>.row>*:nth-child(4)>.h-bg-rainbow:focus,
-	.h-bg-green:hover,
-	.h-bg-green:focus {
-		color: #fff;
-		border-color: #48d5a2;
-		background-color: #48d5a2;
-	}
-
-	.rainbow-cards>.row>*:nth-child(4)>.h-bg-rainbow:hover,
-	.h-bg-green:hover .color-gray {
-		color: #f5f5f5;
-	}
-
-	.rainbow-cards>.row>*:nth-child(5)>.h-bg-rainbow:hover,
-	.rainbow-cards>.row>*:nth-child(5)>.h-bg-rainbow:focus,
-	.h-bg-pink:hover,
-	.h-bg-pink:focus {
-		color: #fff;
-		border-color: #f79098;
-		background-color: #f79098;
-	}
-
-	.rainbow-cards>.row>*:nth-child(5)>.h-bg-rainbow:hover,
-	.h-bg-pink:hover .color-gray {
-		color: #f5f5f5;
-	}
-
-	.rainbow-cards>.row>*:nth-child(6)>.h-bg-rainbow:hover,
-	.rainbow-cards>.row>*:nth-child(6)>.h-bg-rainbow:focus,
-	.h-bg-yellow:hover,
-	.h-bg-yellow:focus {
-		color: #fff;
-		border-color: #f7d974;
-		background-color: #f7d974;
-	}
-
-	.rainbow-cards>.row>*:nth-child(6)>.h-bg-rainbow:hover,
-	.h-bg-yellow:hover .color-gray {
-		color: #f5f5f5;
-	}
-
-	.h-shadow:hover {
-		box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
-	}
-
-	.h-scale:hover {
-		transform: scale(1.05);
-	}
-
-	.h-transition-sm {
-		transition: all 0.15s linear;
-	}
-
-	.h-transition-md {
-		transition: all 0.3s linear;
-	}
-
-	.h-transition-lg {
-		transition: all 0.5s linear;
-	}
-
-	.svg-fill {
-		fill: #120E1E;
-	}
-
-	.h-bg-rainbow:hover .svg-fill {
-		fill: #ffffff;
-	}
-
-	.h-bg-blue:hover .svg-fill {
-		fill: #ffffff;
-	}
-
-	.h-bg-purple:hover .svg-fill {
-		fill: #ffffff;
-	}
-
-	.h-bg-orange:hover .svg-fill {
-		fill: #ffffff;
-	}
-
-	.h-bg-green:hover .svg-fill {
-		fill: #ffffff;
-	}
-
-	.h-bg-pink:hover .svg-fill {
-		fill: #ffffff;
-	}
-
-	.h-bg-yellow:hover .svg-fill {
-		fill: #ffffff;
-	}
-}
-
 /*//////////////////////////////////////////////////////////////////
 [ BASE STYLES ]*/
 
@@ -835,15 +694,6 @@ img {
     .fs-lg-52 {
         font-size: 52px;
     }
-}
-
-.lh-4 {
-    line-height: 1.5;
-}
-
-ul.lh-4 > li::marker {
-	content: '✔ ';
-	color: var(--color-blue);
 }
 
 .bg-img {
@@ -1269,6 +1119,10 @@ ul.lh-4 > li::marker {
     margin-bottom: 0;
 }
 
+.section-widget {
+    margin-bottom: 60px;
+}
+
 .dark-mode {
     --bs-link-color: var(--color-white);
     --bs-link-hover-color: var(--color-blue);
@@ -1353,19 +1207,6 @@ ul.lh-4 > li::marker {
 
 .portfoliSwiper .swiper-slide {
     width: 500px;
-}
-
-.card.card-pricing {
-    --bs-card-border-color: rgba(255, 255, 255, .1);
-    --bs-card-bg: rgba(18, 14, 30, 0.8);
-}
-
-.card.card-pricing .text-muted {
-    color: #F5F6F7 !important;
-}
-
-.card.card-pricing .card-footer {
-    --bs-card-border-width: 0;
 }
 
 .cta {
@@ -1523,88 +1364,6 @@ ul.lh-4 > li::marker {
     margin-left: 0;
 }
 
-.top-sale-image-1 {
-    margin-top: -5rem;
-    margin-bottom: 0;
-}
-
-.top-sale-image-3 {
-    margin-top: -5rem;
-}
-
-.top-sale-image-4 {
-    margin-bottom: -3rem;
-}
-
-@media (min-width: 992px) {
-
-    .top-sale-image-1 {
-        margin-top: 0;
-        margin-bottom: -5rem;
-    }
-
-    .top-sale-image-3 {
-        margin-top: -5rem;
-    }
-
-    .top-sale-image-4 {
-        margin-bottom: -3rem;
-    }
-}
-
-@media (min-width: 1300px) {
-
-    .top-sale-image-1 {
-        margin-left: 0;
-        margin-right: 5rem;
-    }
-
-    .top-sale-image-4 {
-        margin-left: 5rem;
-        margin-right: 5rem;
-    }
-}
-
-.cta-promo {
-    position: relative;
-    border-radius: 2rem;
-    background-position: 0 50% !important;
-}
-
-.cta-promo-img {
-    position: absolute;
-    top: 50%;
-    right: -90px;
-    transform: translateY(-40%);
-    width: 250px;
-}
-
-@media (min-width: 768px) {
-
-    .cta-promo-img {
-        right: 16px;
-        transform: translateY(-50%);
-        width: 300px;
-    }
-}
-
-@media (min-width: 992px) {
-    .cta-promo {
-        background-position: 50% 50% !important;
-    }
-
-    .cta-promo-img {
-        right: 32px;
-    }
-}
-
-@media (min-width: 1200px) {
-    .cta-promo-img {
-        right: 95px;
-        transform: translateY(-50%);
-    }
-}
-
 .avatar-container {
     position: relative;
 }
@@ -1753,41 +1512,6 @@ p.desc-period{
 }
 
 /*------------------------------------------------------------------
-[ top-banner ]*/
-
-.card.card-hover-dark-3 {
-    --bs-card-spacer-y: 1.5rem;
-    --bs-card-spacer-x: 1.5rem;
-    --bs-card-cap-padding-y: 1.5rem;
-    --bs-card-cap-padding-x: 1.5rem;
-    --bs-card-border-color: #f3f3f3;
-    --bs-card-bg: rgba(255, 255, 255, 1);
-    background-image: none;
-    background-size: cover;
-}
-
-@media (min-width: 1200px) {
-
-    .card.card-hover-dark-3 .btn-primary::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        z-index: 1;
-    }
-
-    .card.card-hover-dark-3 .btn-primary {
-        --bs-btn-hover-border-color: #fff;
-    }
-
-    .card.card-hover-dark-3 .btn-gradient:hover {
-        background: none;
-    }
-}
-
-/*------------------------------------------------------------------
 [ section-main-hero ]*/
 
 .section-main-hero {
@@ -1796,14 +1520,15 @@ p.desc-period{
     padding-bottom: 3rem;
 }
 
-.section-main-hero .parallax-wrap {
+.hero-parallax-wrap {
     position: absolute;
     top: 0;
     width: 100%;
     height: 100%;
+    z-index: -1;
 }
 
-.section-main-hero .parallax-wrap img {
+.hero-parallax-wrap img {
     position: absolute;
     top: 0;
     width: 100%;
@@ -1811,8 +1536,45 @@ p.desc-period{
     object-fit: cover;
 }
 
-.main-hero-content {
+.hero-main-content {
     position: relative;
+}
+
+.hero-main-content__container {
+    max-width: 800px;
+}
+
+.widget-hero {
+    margin-bottom: 48px;
+}
+
+.widget-hero:last-child {
+    margin-bottom: 0;
+}
+
+.hero-text {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.hero-text p:last-child {
+    margin-bottom: 0;
+}
+
+.hero-numbers {
+    margin-bottom: 32px;
+}
+
+.hero-numbers__title {
+    font-family: var(--ff-title);
+    font-size: 1.75rem;
+    font-weight: 700;
+    margin-bottom: 0;
+}
+
+.hero-numbers__subtitle {
+    font-size: 1rem;
+    margin-bottom: 0;
 }
 
 @media (min-width: 1400px) {
@@ -1834,33 +1596,72 @@ p.desc-period{
     position: relative;
 }
 
-.card.card-hover-dark-1 {
+.hero-cards-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+}
+
+.hero-cards-grid > * {
+    height: 100%;
+}
+
+.hero-price-card {
     --bs-card-spacer-y: 0.5rem;
     --bs-card-spacer-x: 1rem;
     --bs-card-border-color: #f3f3f3;
+    --bs-card-border-radius: 1rem;
     --bs-card-cap-padding-y: 0.5rem;
     --bs-card-cap-padding-x: 1rem;
-    --bs-card-bg: rgba(255, 255, 255, 1);
+    --bs-card-bg: #fff;
+    color: #120E1E;
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+    text-decoration: none;
+    padding: 1rem;
+    transition: all 0.3s ease;
 }
 
-.card-body-text p {
-    margin-bottom: 0;
+.hero-price-card .card-title {
+    font-family: var(--ff-title);
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
 }
 
-.card-body-text p+p {
-    margin-top: 1rem;
+.hero-price-card .card-subtitle {
+    font-family: var(--ff-title);
+    font-size: 1.25rem;
+    font-weight: 400;
+    margin-bottom: 1rem;
 }
 
-@media (min-width: 1200px) {
+.hero-price-card .card-body {
+    color: var(--color-grey);
+}
 
-    .card.card-hover-dark-1 .btn-primary::after {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        z-index: 1;
-        content: "";
+.hero-price-card:hover {
+    --bs-card-border-color: #7fc4ff;
+    --bs-card-bg: #7fc4ff;
+    color: #fff;
+    transform: scale(1.05);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15)
+}
+
+.hero-price-card:hover .card-body {
+    color: #fff;
+}
+
+.hero-price-card:hover .btn-primary {
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: transparent;
+    --bs-btn-hover-border-color: #fff;
+    background-image: none;
+}
+
+@media (min-width: 992px) {
+
+    .hero-cards-grid {
+        grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
@@ -1870,6 +1671,177 @@ p.desc-period{
         margin-top: -26rem;
     }
 }
+
+/*------------------------------------------------------------------
+[ section-services ]*/
+
+.services-cards-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem;
+}
+
+.services-cards-grid > * {
+    height: 100%;
+}
+
+.services-card {
+    --bs-card-spacer-y: 1rem;
+    --bs-card-spacer-x: 1rem;
+    --bs-card-border-color: #f3f3f3;
+    --bs-card-border-radius: 1rem;
+    --bs-card-cap-padding-y: 1rem;
+    --bs-card-cap-padding-x: 1rem;
+    --bs-card-bg: #fff;
+    color: #120E1E;
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+    text-decoration: none;
+    padding: 1rem;
+    transition: all 0.3s ease;
+}
+
+.services-card .card-icon {
+    margin-bottom: 1rem;
+}
+
+.services-card .card-title {
+    font-family: var(--ff-title);
+    font-size: 1.5rem;
+    font-weight: 400;
+    margin-bottom: 1rem;
+}
+
+.services-card .card-body {
+    font-size: 14px;
+}
+
+.services-card:hover {
+    --bs-card-border-color: #7fc4ff;
+    --bs-card-bg: #7fc4ff;
+    color: #fff;
+    transform: scale(1.05);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15)
+}
+
+.services-card:hover .svg-fill {
+    fill: #ffffff;
+}
+
+.services-card:hover .btn-primary {
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: transparent;
+    --bs-btn-hover-border-color: #fff;
+    background-image: none;
+}
+
+.services-card:nth-child(2):hover {
+    --bs-card-border-color: #b593ff;
+    --bs-card-bg: #b593ff;
+}
+
+.services-card:nth-child(3):hover {
+    --bs-card-border-color: #fb785b;
+    --bs-card-bg: #fb785b;
+}
+
+.services-card:nth-child(4):hover {
+    --bs-card-border-color: #48d5a2;
+    --bs-card-bg: #48d5a2;
+}
+
+.services-card:nth-child(5):hover {
+    --bs-card-border-color: #f79098;
+    --bs-card-bg: #f79098;
+}
+
+.services-card:nth-child(6):hover {
+    --bs-card-border-color: #f7d974;
+    --bs-card-bg: #f7d974;
+}
+
+@media (min-width: 992px) {
+
+    .services-cards-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+/*------------------------------------------------------------------
+[ section-cta ]*/
+
+.cta-content {
+    position: relative;
+    padding: 40px 40px;
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+.cta-content__text {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 2rem;
+}
+
+.cta-title {
+    color: #fff;
+    font-family: var(--ff-title);
+    font-size: calc(1.375rem + 1.5vw);
+    font-weight: 700;
+    margin-bottom: 0;
+}
+
+.cta-content__img {
+    position: absolute;
+    top: 50%;
+    right: -67px;
+    transform: translateY(-50%);
+    width: 220px;
+    height: auto;
+}
+
+@media (min-width: 992px) {
+
+    .cta-content {
+        padding: 40px 110px;
+        border-radius: 40px;
+        overflow: visible;
+    }
+
+    .cta-content__text {
+        gap: 4rem;
+        padding-right: calc(287px + 10px);
+    }
+
+    .cta-title {
+        font-size: 2.5rem;
+    }
+    
+    .cta-title br {
+        display: none;
+    }
+
+    .cta-content__img {
+        right: 90px;
+        width: 287px;
+    }
+}
+
+/*------------------------------------------------------------------
+[ price-service ]*/
+
+.price-service {
+    position: relative;
+}
+
+.price-service:target {
+    scroll-margin-top: 110px;
+}
+
+/*------------------------------------------------------------------
+[ section-... ]*/
+
 
 /*//////////////////////////////////////////////////////////////////
 [ MEDIA ]*/
